--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Funny Joke</h1>
+        <h1>MAHAL KITA, JOKE LANG :)</h1>
     </header>
 
     <div class="container">
